Fix links align

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -2,6 +2,7 @@ body > header{
   display: flex;
   justify-content: space-between;
   height: 4em;
+  line-height: 1;
 }
 
 body > header > * {
